fix(css): hide overflow for whole page

--- a/assets/colors.scss
+++ b/assets/colors.scss
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 .v-application {
   background-color: transparent !important;
 }
